--- a/.env
+++ b/.env
@@ -7,3 +7,6 @@ PG_PASSWORD = password
 PG_DATABASE = jaraqe
 PG_HOST = 127.0.0.1
 PG_PORT = 5432
+
+INSTAGRAM_CLIENT_ID = 'dae2183232d44dbdb2f052f7a4c0d7a9'
+INSTAGRAM_CLIENT_SECRET = 'a327d6bb0b4a4995b50c74e07486cfe9'
