--- a/.env
+++ b/.env
@@ -8,5 +8,11 @@ PG_DATABASE = jaraqe
 PG_HOST = 127.0.0.1
 PG_PORT = 5432
 
+MONGO_HOST = localhost
+MONGO_PORT = 27017
+MONGO_DATABASE = jaraqe
+MONGO_USER =
+MONGO_PASS =
+
 INSTAGRAM_CLIENT_ID = 'dae2183232d44dbdb2f052f7a4c0d7a9'
 INSTAGRAM_CLIENT_SECRET = 'a327d6bb0b4a4995b50c74e07486cfe9'
