--- a/package.json
+++ b/package.json
@@ -45,11 +45,13 @@
     "express-validation": "1.0.2",
     "flat-transform": "4.1.1",
     "fs-extra-promise": "1.0.1",
+    "handlebars": "^4.0.11",
     "helmet": "3.9.0",
     "http-server": "0.10.0",
     "i18n": "0.8.3",
     "joi": "11.4.0",
     "method-override": "2.3.10",
+    "mongoose": "^5.0.0",
     "node-opensignal-api": "0.0.3",
     "persian": "~1.0.0",
     "pg": "7.3.0",
