--- a/package.json
+++ b/package.json
@@ -50,10 +50,12 @@
     "helmet": "3.9.0",
     "http-server": "0.10.0",
     "i18n": "0.8.3",
+    "ioredis": "^3.2.2",
     "joi": "11.4.0",
+    "kue": "^0.11.6",
     "method-override": "2.3.10",
     "mongoose": "^5.0.0",
-    "node-opensignal-api": "0.0.3",
+    "node-opensignal-api": "^0.0.3",
     "persian": "~1.0.0",
     "pg": "7.3.0",
     "pg-hstore": "2.3.2",
