--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "express-validation": "1.0.2",
     "flat-transform": "4.1.1",
     "fs-extra-promise": "1.0.1",
+    "googleapis": "^25.0.0",
     "handlebars": "^4.0.11",
     "helmet": "3.9.0",
     "http-server": "0.10.0",
