--- a/.env
+++ b/.env
@@ -14,5 +14,21 @@ MONGO_DATABASE = jaraqe
 MONGO_USER =
 MONGO_PASS =
 
+REDIS_PORT = 6379
+REDIS_HOST = localhost
+
+# MONGO_HOST = 78.46.245.120
+# MONGO_PORT = 27017
+# MONGO_DATABASE = jaraqe
+# MONGO_USER = mehdi
+# MONGO_PASS = theroadtouranus
+
 INSTAGRAM_CLIENT_ID = 'dae2183232d44dbdb2f052f7a4c0d7a9'
 INSTAGRAM_CLIENT_SECRET = 'a327d6bb0b4a4995b50c74e07486cfe9'
+
+ONESIGNAL_API_KEY_JARAQE_DEFAULT = ZjA2NzU3MjgtMjY4OS00Zjg4LWI2NmItYzBhOTU0NWFhNTM5
+ONESIGNAL_APP_ID_JARAQE_DEFAULT = def5e44f-e9b4-429c-b200-5c08e013d0fd
+
+ZARINPAL_API_KEY = 64d662da-a70c-11e6-8bce-005056a205be
+GOOGLE_CLIENT_SECRET = z1CnbGpP9XcnD2uaf7HQ3TUa
+GOOGLE_CLIENT_ID = 922756825347-kjnil5k779psao4anenaloiipdeljvi5.apps.googleusercontent.com
